# wakaama

./: .cproject  .gitmodules  .project  lwm2mclient.launch  lwm2mserver.launch
bin-client/: clean.sh  cmake.sh
bin-server/: clean.sh  cmake.sh
core/: CMakeLists.txt  internals.h  liblwm2m.c  list.c  management.c  object_server.c  objects.c  observe.c  packet.c  registration.c  tlv.c  transaction.c  types.h  uri.c  utils.c
tests/client/: CMakeLists.txt
